debci (0.7.3) UNRELEASED; urgency=medium

  * debci-generate-feeds:
    - always update the global feed.
    - Point main link of feed entries to the debci log instead of the package
      page.

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 13 Jun 2014 11:34:50 -0300

debci (0.7.2) unstable; urgency=medium

  * Fix calculation of test elapsed time. We can't store the beginning
    timestamp at the adt-run output directory because that will be wiped out
    by adt-run before running the test.
  * public/index.html: fix source code URL to point to the collab-main
    repository which is the canonical one.

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 10 Jun 2014 17:30:41 -0300

debci (0.7.1) unstable; urgency=medium

  * Fix handling of blame with "unknown" as value. Will avoid crashing when
    generating indexes

 -- Antonio Terceiro <terceiro@debian.org>  Mon, 09 Jun 2014 11:07:11 -0300

debci (0.7) unstable; urgency=medium

  [ Antonio Terceiro ]
  * debci-batch: put packages with fastest testsuites first in the queue
  * debci-generate-feeds: allow generating feeds for specific packages
  * debci-generate-index: update package feed right away when indexing
    individual packages
  * public/app.js: Adjust the "Pass percentage" Y axis labels so that chart is
    actually a percentage chart.
  * public/index.html: add link to global Atom feed in the home page.
  * debci-test, debci-generate-index: more robust way of calculating test run
    duration. Parsing the autopkgtest log is just not good enough.

  [ Martin Pitt ]
  * Fix report_status() to work for bash scripts.
  * debci-test: Add --print-output option to write output directory to stdout.
    With that the caller can easily check the result.
  * debci, tools/server.sh: Exec the target program instead of running in a
    subprocess, for efficiency and proper SIGTERM handling.
  * Drop tools/convert-data. We only needed it for version 0.6, and we're